# openAPI/swagger.json
@@ -49,7 +49,7 @@
           }
         },
         "tags": [
-          "Books"
+          "BooksController"
         ]
       },
       "get": {
@@ -61,7 +61,7 @@
           }
         },
         "tags": [
-          "Books"
+          "BooksController"
         ]
       }
     },
@@ -84,7 +84,7 @@
           }
         },
         "tags": [
-          "Books"
+          "BooksController"
         ]
       },
       "delete": {
@@ -105,7 +105,7 @@
           }
         },
         "tags": [
-          "Books"
+          "BooksController"
         ]
       },
       "get": {
@@ -126,7 +126,7 @@
           }
         },
         "tags": [
-          "Books"
+          "BooksController"
         ]
       }
     },
@@ -150,7 +150,7 @@
           }
         },
         "tags": [
-          "Chapters"
+          "ChaptersController"
         ]
       },
       "get": {
@@ -162,7 +162,7 @@
           }
         },
         "tags": [
-          "Chapters"
+          "ChaptersController"
         ]
       }
     },
@@ -185,7 +185,7 @@
           }
         },
         "tags": [
-          "Chapters"
+          "ChaptersController"
         ]
       },
       "delete": {
@@ -206,7 +206,7 @@
           }
         },
         "tags": [
-          "Chapters"
+          "ChaptersController"
         ]
       },
       "get": {
@@ -227,7 +227,7 @@
           }
         },
         "tags": [
-          "Chapters"
+          "ChaptersController"
         ]
       }
     },
@@ -249,7 +249,10 @@
           "201": {
             "description": ""
           }
-        }
+        },
+        "tags": [
+          "UsersController"
+        ]
       }
     },
     "/users/{email}": {
@@ -269,7 +272,10 @@
           "200": {
             "description": ""
           }
-        }
+        },
+        "tags": [
+          "UsersController"
+        ]
       },
       "patch": {
         "operationId": "UserController_updateUser",
@@ -297,7 +303,10 @@
           "200": {
             "description": ""
           }
-        }
+        },
+        "tags": [
+          "UsersController"
+        ]
       },
       "delete": {
         "operationId": "UserController_deleteUser",
@@ -315,7 +324,10 @@
           "200": {
             "description": ""
           }
-        }
+        },
+        "tags": [
+          "UsersController"
+        ]
       }
     },
     "/auth/login": {
@@ -338,7 +350,7 @@
           }
         },
         "tags": [
-          "Auth"
+          "AuthController"
         ]
       }
     },
@@ -362,7 +374,7 @@
           }
         },
         "tags": [
-          "Auth"
+          "AuthController"
         ]
       }
     },
@@ -386,7 +398,7 @@
           }
         },
         "tags": [
-          "Auth"
+          "AuthController"
         ]
       }
     }
